# tish-polars

./: .gitignore  COMPATIBILITY.md  Cargo.toml  README.md  package.json
examples/polars-bench/: README.md  package.json  tish.yaml
examples/polars-bench/src/: main.tish
examples/polars-cli/: README.md  package.json  tish.yaml
examples/polars-cli/data/: results.json  sales.csv
examples/polars-cli/src/: main.tish
examples/polars-http/: README.md  package.json  tish.yaml
examples/polars-http/.zish/: project.json
examples/polars-http/src/: main.tish
examples/polars-sql-join/: README.md  package.json  tish.yaml
examples/polars-sql-join/data/: categories.csv
examples/polars-sql-join/src/: main.tish
scripts/: smoke-polars-http.mjs
src/: lib.rs
